--- a/style.css
+++ b/style.css
@@ -224,3 +224,84 @@ text-align: center;
   right: -1300px;
   position: relative;
 }
+
+/* Base (mobile first): default layout */
+
+/* Tablet and up (≥ 600px) */
+@media screen and (min-width: 600px) {
+  #about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .home {
+    flex-direction: row;
+  }
+}
+
+/* Desktop and up (≥ 992px) */
+@media screen and (min-width: 992px) {
+  .image img {
+    max-width: 300px;
+  }
+  .text {
+    font-size: 1.5rem;
+  }
+  .skills-wrapper {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 480px) {
+  nav {
+    margin: 3px;
+    height: auto;
+    font-size: 1rem;
+    padding: 5px;
+  }
+  .right {
+margin: 2px;
+    align-items: flex-start;
+  }
+  .right a {
+    margin: 5px 0;
+  }
+  .btn {
+    width: 80%;
+  }
+
+  img{
+    max-width: 200px;
+  }
+.pro{
+  display: flex;
+  flex-direction: column;
+}
+.about{
+  font-size: 1.2rem;
+}
+.about h1{
+  font-size: 1.2rem;
+  text-align: center;
+}
+#about img{
+  max-width: 200px;
+}
+#about{
+  display: flex;
+  flex-direction: column;
+}
+.image img{
+  max-width: 300px;
+ border-radius: 500px;
+width:100%;
+margin: 20px;
+margin-left: 30px;
+box-shadow: 0 1px 30px #0ef;
+}
+.text{
+  font-size: 1.2rem;
+
+  margin: 20px;
+}
+
+}
